--- a/app/src/main/res/layout/activity_menu_opciones.xml
+++ b/app/src/main/res/layout/activity_menu_opciones.xml
@@ -55,7 +55,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Digite Contraseña"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.372"
         app:layout_constraintStart_toEndOf="@+id/textView7"
